testcases/collectCases/invalidCases/suffix04test.py
# _*_ coding: utf-8 _*_
# @File : suffix04test.py
# @Author : isquz
# @Time : 2020/8/29 13:48 
# @desc :

def test_out_of_Testclass4():
    assert True

def testOut_of_Testclass4():
    assert True

def out_of_Testclass4_test():
    assert True

def out_of_Testclass4test():
    assert True

def between_test_out_of_TestClass4():
    assert True


class Testclass4():

    def testIn_Testclass4(self):
        assert True

    def test_in_Testclass4(self):
        assert True

    def in_Testclass4_test(self):
        assert True

    def in_Testclass4test(self):
        assert True

class cls4Test():

    def testIn_non_Testclass4(self):
        assert True

    def test_in_non_Testclass4(self):
        assert True

    def in_non_Testclass4_test(self):
        assert True

    def in_non_Testclass4test(self):
        assert True